--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ ul {
       <br>for additional money. email me or send me a message on instagram to talk details. at least one week turnaround please. 
       <br>
       <br>(9/28/22)
-    <br>out now on <a href="http:/tapesscree.bandcamp.com">tapes scree</a>: "am", an album by guests, my main music project.
+    <br>out now on <a href="https:/tapesscree.bandcamp.com">tapes scree</a>: "am", an album by guests, my main music project.
     <br>marking a departure from the debut guests offering, "legacy, out back" which shunned all amplification in favor of exploring the power of the human voice,
     <br>this album embraces the electric whole-heartedly as guitars squeal and distortion washes over the mix like a wave breaking. 
     <br>interspersed are momentary callbacks to guests earlier days -- folky interludes painting a picture of our narrator alone in nature,
