--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ h1:hover {
 <body>
   <div class="body">
     <div class="container">
- <a href="news.html"><img src="cat-halftone.png" style="width: 800px; height: 800px; margin-right: 10px;" class="image">
+ <a href="home.html"><img src="cat-halftone.png" style="width: 800px; height: 800px; margin-right: 10px;" class="image">
  <div class="overlay">
   <img src="cat-halftone.png" style="width: 800px; height: 800px; margin-right: 10px;" class="image">
   <div class="text">enter</div>
