--- a/about.html
+++ b/about.html
@@ -3,97 +3,66 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
 	<title>𓆑</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 <style>
 
+h1 {font-size: 80px; 
+
+}
+
 body {
-background-color:aliceblue;
+  background-color:aliceblue;
 	font-size: 20px;
-	text-align: left;
-	font-family: ;
- overflow-x: scroll;
- white-space: wrap;
- border-style: ;
- border-radius: 0%;
- border-color:;
- border-width: ;
- border-bottom: ;
- border-right: ;
- margin-right: ;
- background-image: ;
+	text-align: center;
+	font-family: 'EB Garamond', serif;
+  margin-left: 25% ;
+  margin-right: 25%;
+ background: url("bg1.jpg") no-repeat, scroll;
  
 	}
-
-a {
-  text-decoration: ;
-  font-size: 20px;
-  color: 
-  font-family: ;
- text-decoration: ;
-}
-a.hover {
-  background-color: deeppink;
-  color:aliceblue;
-}
-
-
-.img-container {
-  float: right;
-  padding: 15px;
-  display: inline;
-  margin-top: 0em;
-}
-.nav li a {
-    padding: 0.75rem;
-    border: ;
-    text-decoration: none;
-    color: black;
-    display: block;
-    width: ;
-    height: ;
-    line-height: ;
-    text-align: center;
-    font-size: 24px;
-
-}
-.nav li{
-  display: inline-block;
-}
-ul {
-  padding: 0px;
-    list-style-type: none;
-    margin-right: 24em;
-  float: center;
-  
-}
-
-.body{
-  padding-left: 10%;
-  padding-right: 10%;
-  margin-top: 10%;
- 
-}
-.header{
-  font-size:46px;
-  font-family: Georgia, serif;
-}
+  @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
 </style>
-
+</head>
 <body>
-  <div class="body">
-    <header><div class="header">
-<img src="pic.jpeg" height="400px">
-  </div>
-  </header>	
-  <br>my name is jean canfield. this website is a portfolio & archive for my work.
-  <br>other than my visual art & music practices, i run a small experimental & rock music label called <a href="https://tapesscree.bandcamp.com">tapes scree.</a>
-  <br>am currently living in seattle, wa.
-<br>reach me at birdflyingbelowtheground@gmail.com
-  <p><a href=index.html><< back</a></p>
-    
-
-</div>
-
-	</body>
-	</html>
-	
-	
+<br><h1>About Who?</h1>
+<br><img src="pic-1 copy.png" width="400px" alt="pic of jean holding coffee cup" title="me">
+<p>hi! my name is jean canfield & this is my website. here i collect, archive, 
+  & share my work. 
+  <br>
+  <br>✤
+  <p>a little about myself: 
+  <br>i am artist working in several different mediums,
+   including sequential arts (comics, animation), screenprinting, graphic design, 
+   electronic music, drawing, painting, songwriting, & music production. 
+   <br>✤
+   <br>i live in seattle. i am 31 years old.
+   <br>i am nonbinary, queer, & transsexual. the pronouns i use are "they/them".
+   <br>✤
+   <br>i am a snob about orange juice, pizza, coffee, & bagels. that's about it tho.
+    <br>i grew up organizing diy shows around my florida bust town in the 
+    <br>shadow of the Kennedy Space Center.
+    <br>later, i attending Florida State University in Tallahassee and majored in Art with a focus on drawing.
+    <br>i have toured the states with a band, as well as just kind of drifted around/living out of my car for periods.
+    <br>✤
+    <br>these days i mostly hang at home and read and draw and write songs with my assistant, Worm, the cat.
+    <br>she also goes by Baby, Bambino, Babs, Barbara, etc. 
+  <br>i like quiet forests, incredibly loud live music, sandy beaches, rocky beaches, 
+  ruins, creatures, graffiti, radical theory/history/praxis, queer lit, freaky art, 
+  cinema, & living free wild life.
+  <br>✤
+  <br>i sometimes accept freelance jobs. some examples of past work can be found here.
+    <p>if you would like to get in touch you can reach me at: <a href="mailto:jean@birdflyingbelowtheground.net">jean@birdflyingbelowtheground.net</a>  
+    </p>
+    <p>i like email :)</p>
+</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p><a href="home.html"><<< back</a></p>
+</body>
+</html>
