--- a/music.html
+++ b/music.html
@@ -2,66 +2,137 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
-	<title>swoop</title>
+	<title>𓆑</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 <style>
 
+h1 {
+  font-size: 80px; 
+  text-align: ;
+
+}
+
 body {
-background-color: gainsboro;
-	font-size: 24px;
+  background-color:aliceblue;
+	font-size: 20px;
 	text-align: left;
-	font-family: 'Times New Roman', Times, serif;	 
+	font-family: 'EB Garamond', serif;
+ background: url("bg1.jpg") no-repeat, scroll;
+ 
 	}
+  details {
+  padding: .2rem;
+}
 
-	h1 {
-	  text-decoration: ;
-    color: yellowgreen;
-  font-size: 50px
+h2, h3 {
+  font-size: 20px;
+  margin: 0px;
+  display: inline;
 }
-  h2 {
-    font-size: 12px;
-    text-align: left;
-	font-family: tahoma;
-  }
-a {
-  text-decoration: ;
-  color: yellowgreen;
-  font-family: tahoma;
+
+.details-content {
+  padding-top: ;
+  padding-left: ;
 }
-a:hover {
-  color: red;
-  background-color: transparent;
-  text-decoration: underline;
+
+.details-content p {
+  font-size: ;
+  margin-bottom: 0px;
 }
-div {
-  margin: 70px;
+
+.details-content li {
+  margin: ;
 }
-.div1 {
-  float: right;
+
+details p {
+  margin: 0px;
 }
-.img-container {
-  float: right;
-  width: 20%;
-  padding: 15px;
+.details-content ul {
+  padding-top: ;
 }
+
+  @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
 </style>
-	<body>
-		
-    <p style="font-size:50px; font-family: Georgia, serif;">𓆑 my music</p>
-	<div>
- 	<br><iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1877645152/size=large/bgcol=333333/linkcol=e99708/minimal=true/transparent=true/" seamless><a href="https://world-records.bandcamp.com/album/wire-department-ii">wire department II by wire department</a></iframe> <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1502739523/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/fat-cat-residency-demos">fat cat residency demos by guests</a></iframe> 
- <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1337685215/size=large/bgcol=333333/linkcol=fe7eaf/minimal=true/transparent=true/" seamless><a href="https://world-records.bandcamp.com/album/wire-department">Wire Department by Wire Department</a></iframe>
-	 <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=4266885844/size=large/bgcol=ffffff/linkcol=2ebd35/minimal=true/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/legacy-out-back">Legacy Out Back by guests</a></iframe> 
-<iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=3290601048/size=large/bgcol=333333/linkcol=e99708/minimal=true/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/sunday-practice">Sunday Practice by guests</a></iframe>
-<div class="img-container"><a href="index.html"><img src="lil-guy.png" style="width:250px"></a></div>
-
- <h3>
-  </h3>
+</head>
+<body>
+  <h1>Music</h1>
+  <br>
+  <br>
+  <br>
+  <h2>bands & music projects</h2>
+  <details>
+<summary>
+<h2>guests</h2>
+</summary>
+<div class="inner-details">
+    <summary>
+      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=866324616/size=large/bgcol=ffffff/linkcol=e99708/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/am">am by guests</a></iframe>      </div>
+      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4266885844/size=large/bgcol=ffffff/linkcol=2ebd35/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/legacy-out-back">Legacy Out Back by guests</a></iframe>    </div>
+    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3290601048/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/sunday-practice">Sunday Practice by guests</a></iframe>  </div>  
+  </summary>
 </div>
+</details>
+<details>
+  <summary>
+  <h2>wire dept</h2>
+  </summary>
+  <div class="inner-details">
+      <summary>
+        <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4237199698/size=large/bgcol=ffffff/linkcol=f171a2/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://wiredepartment.bandcamp.com/album/wire-department">Wire Department by wire department</a></iframe>        </div>
+    </summary>
+  </div>
+  </details>
+  <details>
+    <summary>
+    <h2>flying fish cove</h2>
+    </summary>
+    <div class="inner-details">
+        <summary>
+          <div>
+            <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=813393846/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://flyingfishcove.bandcamp.com/album/magic-wand">Magic Wand by Flying Fish Cove</a></iframe>          </div>
+      </summary>
+    </div>
+    <div class="inner-details">
+      <summary>
+        <div class="example">
+          <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3124225573/size=large/bgcol=ffffff/linkcol=e99708/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://flyingfishcove.bandcamp.com/album/en-garde">En Garde by Flying Fish Cove</a></iframe>        </div>
+  <div class="inner-details">
+    <summary>
+      <div class="example">
+        <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3765397027/size=large/bgcol=ffffff/linkcol=333333/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://flyingfishcove.bandcamp.com/album/at-moonset-2">At Moonset by Flying Fish Cove</a></iframe>        <div class="inner-details">
+      <div class="example">
+        <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3404489492/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://flyingfishcove.bandcamp.com/album/live-on-1077-the-end">Live on 107.7 The End by Flying Fish Cove</a></iframe>            </div>
+            </details>  
+      </details>  
+      <p></p>
+      <h2>tapes scree (tape label)</h2>
+      <details>
+        <summary>
+        <h2>releases</h2>
+        </summary>
+        <div class="inner-details">
+            <summary>
+                <h2>(2022)</h2>
+            </summary>
+                <summary>
+                  <div class="example">
+                    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3781748820/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://tapesscree.bandcamp.com/album/my-guitar">my guitar by hat stall number 1</a></iframe>
+                  </div>
+                  <div class="example">
+                    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=650146183/size=large/bgcol=ffffff/linkcol=e99708/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://tapesscree.bandcamp.com/album/am">am by guests</a></iframe>
+                  </div>
+                  <div class="example">
+                    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3013687316/size=large/bgcol=ffffff/linkcol=2ebd35/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://tapesscree.bandcamp.com/album/human-learning">human learning by clem hepburn</a></iframe>
+                    </div>
 
-	</body>
-	</html>
-	
-	
-<!doctype html>
-<html>
-
+                </summary>
+              </div></summary>
+              <br>
+              <br>
+              <br>
+              <br>
+              <p><a href="home.html"><<< back</a></p>
+  </body>
+</html>
