--- a/about.html
+++ b/about.html
@@ -38,12 +38,13 @@ body {
    electronic music, drawing, painting, songwriting, & music production. 
    <br>✤
    <br>i live in seattle. i am 31 years old.
-   <br>i am nonbinary, queer, & transsexual. the pronouns i use are "they/them".
+   <br>i am a nonbinary, queer transsexual woman. the pronouns i use are "they/them".
    <br>✤
    <br>i am a snob about orange juice, pizza, coffee, & bagels. that's about it tho.
-    <br>i grew up organizing diy shows around my florida bust town in the 
+    <br>i grew up organizing diy shows around my florida bust-town in the 
     <br>shadow of the Kennedy Space Center.
-    <br>later, i attending Florida State University in Tallahassee and majored in Art with a focus on drawing.
+    <br>later, i attended Florida State University & studied studio art with a focus on drawing. 
+    <br>i am a proud art school dropout & i despise the elitism insitutional learning engenders in the arts & the workplace.
     <br>i have toured the states with a band, as well as just kind of drifted around/living out of my car for periods.
     <br>✤
     <br>these days i mostly hang at home and read and draw and write songs with my assistant, Worm, the cat.
@@ -52,13 +53,13 @@ body {
   ruins, creatures, graffiti, radical theory/history/praxis, queer lit, freaky art, 
   cinema, & living free wild life.
   <br>✤
-  <br>i sometimes accept freelance jobs. some examples of past work can be found here.
+  <br>i sometimes accept freelance jobs. some examples of past work can be found <a href="https://birdflyingbelowtheground.wordpress.com/">here</a>.
     <p>if you would like to get in touch you can reach me at: <a href="mailto:jean@birdflyingbelowtheground.net">jean@birdflyingbelowtheground.net</a>  
     </p>
     <p>i like email :)</p>
 </p>
 <br>
-<br>
+<br><img src="anarchy.gif" width="75px">
 <br>
 <br>
 <br>
