--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-generic" />
 	<title>𓆑</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 <style>
-
-html {
-  cursor: url(https://cdn.custom-cursor.com/db/7048/32/animals-snail-cursor.png), auto !important; 
-
-}
-
 body {
   background-color:aliceblue;
 	font-size: 20px;
-	text-align: left;
-	font-family: ;
- overflow-x: wrap;
- white-space: wrap;
+	text-align: center;
+	font-family: 'EB Garamond', serif;
+ overflow-x: ;
+ white-space: ;
  border-style: ;
  border-radius: 0%;
  border-color:;
@@ -24,104 +21,41 @@ body {
  border-bottom: ;
  border-right: ;
  margin-right: ;
- background-image: ;
+ background: url("bg1.jpg") no-repeat, scroll;
  
 	}
+  h1{
+    font-family: 'Fredoka One';
+    font-size: 25px;
 
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  cursor: url(https://cdn.custom-cursor.com/db/7048/32/animals-snail-cursor.png), auto !important; 
-  text-decoration: none;
-}
- 
-a:active{
-  -webkit-filter: invert(1);
-   filter: invert(1);
-   text-decoration: none;
-}
-
-.img-container {
-  float: left;
-  padding: 15px;
-  display: inline;
-  margin-top: 0em;
-}
-
-.container {
-  position: relative;
-  width: 50%;
-  float: left !important;
-}
-
-.overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #ffd000;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  -webkit-transform: scale(0);
-  -ms-transform: scale(0);
-  transform: scale(0);
-  -webkit-transition: .3s ease;
-  transition: 1.5s ease;
-}
-
-.container:hover .overlay {
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-}
-
-.text {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-h1{
-  color: red;
-  font-size: 200pt;
-  font-family: 'Times New Roman', Times, serif;
-}
-h1:hover {
-  font-size: 200pt;
-  font-family: 'Times New Roman', Times, serif;
-}
-.swoop {
-  margin-top: -1000px; 
-}
+  }
+  @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 </style>
-
+</head>
 <body>
-  <div class="body">
-    <div class="container">
- <a href="home.html"><img src="cat-halftone.png" style="width: 800px; height: 800px; margin-right: 10px;" class="image">
- <div class="overlay">
-  <img src="cat-halftone.png" style="width: 800px; height: 800px; margin-right: 10px;" class="image">
-  <div class="text">enter</div>
-</div></a>
-</div>
-</div>
-<h1>bird flying below the ground ꩜
-</h1>
-<div class="swoop">
-<marquee><img src="swoopy2.gif" style="width:400px;"></marquee>
-</div>
+  <img src="hellogirl.png" style="width:400px">
+<br><h>Welcome to </h>
+<h1>birdflyingbelowtheground.net</h1>
+<p>
+  <br><img src="cross.gif" style="height:25px"> <a href="https://birdflyingbelowtheground.wordpress.com/">News</a> <img src="cross.gif" style="height:25px">
+  <br>
+  <br><img src="question.gif" style="width:25px"> <a href="about.html">About</a> <img src="question.gif" style="width:25px">
+<br>
+<br><img src="animstars.gif" style="width:25px"> <a href="comix.html">Comix</a> <img src="animstars.gif" style="width:25px">
+<br>
+<br><img src="cd1.gif" style="width:25px"> <a href="music.html">Music</a> <img src="cd1.gif" style="width:25px">
+<br>
+<br><img src="skull3dverde.gif" style="width:30px"> <a href="https://snerp.bigcartel.com">Shoppes</a> <img src="skull3dverde.gif" style="width:30px">
+<!-- <br><img src="comp.gif" style="width:25px"> Graphic <img src="comp.gif" style="width:25px">
+<br>
+<br><img src="printer.gif" style="width:30px"> Print <img src="printer.gif" style="width:30px">
+<br>
+</p>
+<br>SITE STILL UNDER CONSTRUCTION. PLEASE EXCUSE THE DEAD LINKS -J 
+<br><img src="caution.gif"> <IMG src="anicaution.gif"> <img src="caution2.gif"> 
+<p>thanks for visiting :)</p>
+-->
 
-
-	</body>
-	</html>
-	
-	
+</body>
+</html>
