--- a/home.html
+++ b/home.html
@@ -37,21 +37,25 @@ body {
   <img src="hellogirl.png" style="width:400px">
 <br><h>Welcome to </h>
 <h1>birdflyingbelowtheground.net</h1>
-<p><br><img src="question.gif" style="width:25px"> <a href="about.html">About</a> <img src="question.gif" style="width:25px">
+<p>
+  <br><img src="cross.gif" style="height:25px"> <a href="https://birdflyingbelowtheground.wordpress.com/">News</a> <img src="cross.gif" style="height:25px">
+  <br>
+  <br><img src="question.gif" style="width:25px"> <a href="about.html">About</a> <img src="question.gif" style="width:25px">
 <br>
 <br><img src="animstars.gif" style="width:25px"> <a href="comix.html">Comix</a> <img src="animstars.gif" style="width:25px">
 <br>
 <br><img src="cd1.gif" style="width:25px"> <a href="music.html">Music</a> <img src="cd1.gif" style="width:25px">
 <br>
-<br><img src="comp.gif" style="width:25px"> Graphic <img src="comp.gif" style="width:25px">
+<br><img src="skull3dverde.gif" style="width:30px"> <a href="https://snerp.bigcartel.com">Shoppes</a> <img src="skull3dverde.gif" style="width:30px">
+<!-- <br><img src="comp.gif" style="width:25px"> Graphic <img src="comp.gif" style="width:25px">
 <br>
 <br><img src="printer.gif" style="width:30px"> Print <img src="printer.gif" style="width:30px">
 <br>
-<br><img src="skull3dverde.gif" style="width:30px"> Shoppes <img src="skull3dverde.gif" style="width:30px"></p>
+</p>
 <br>SITE STILL UNDER CONSTRUCTION. PLEASE EXCUSE THE DEAD LINKS -J 
-<br><img src="caution.gif"> <IMG src="anicaution.gif"> <img src="caution2.gif">
+<br><img src="caution.gif"> <IMG src="anicaution.gif"> <img src="caution2.gif"> 
 <p>thanks for visiting :)</p>
-
+-->
 
 </body>
 </html>
