--- a/index.html
+++ b/index.html
@@ -105,20 +105,14 @@ h1:hover {
 </style>
 
 <body>
-  <div class="body">
-    <div class="container">
- <a href="home.html"><img src="cat-halftone.png" style="width: 800px; height: 800px; margin-right: 10px;" class="image">
- <div class="overlay">
-  <img src="cat-halftone.png" style="width: 800px; height: 800px; margin-right: 10px;" class="image">
-  <div class="text">enter</div>
-</div></a>
-</div>
-</div>
+ <a href="home.html"><img src="sig.gif" style="max-width:100%;height:auto;">
 <h1>bird flying below the ground ꩜
-</h1>
+</h1></a>
 <div class="swoop">
 <marquee><img src="swoopy2.gif" style="width:400px;"></marquee>
 </div>
+
+ 
 
 
 	</body>
