--- a/comix.html
+++ b/comix.html
@@ -25,10 +25,10 @@ body {
 </head>
 <body>
   <h1>Comix</h1>
-	<p><a href="starbert.html">Starbert (2019)</a></p>
-	<p><a href="ducklinsvol1.html">Ducklins vol. 1 (2015-2019)</a></p>
-	<p><a href="fetch.html">Fetch (2017)</a></p>
-	<p><a href="thelastcar.html">The Last Car (2013)</a></p>
+	<p><a href="comix/starbert.html">Starbert (2019)</a></p>
+	<p><a href="comix/ducklinsvol1.html">Ducklins vol. 1 (2015-2019)</a></p>
+	<p><a href="comix/fetch.html">Fetch (2017)</a></p>
+	<p><a href="comix/thelastcar.html">The Last Car (2013)</a></p>
 <br>
 <br>
 <br>
