--- a/about.html
+++ b/about.html
@@ -15,10 +15,10 @@ h1 {font-size: 80px;
 body {
   background-color:aliceblue;
 	font-size: 20px;
-	text-align: center;
+	text-align: left;
 	font-family: 'EB Garamond', serif;
   margin-left: 25% ;
-  margin-right: 25%;
+  margin-right: 15%;
  background: url("bg1.jpg") no-repeat, scroll;
  
 	}
@@ -37,23 +37,35 @@ body {
    including sequential arts (comics, animation), screenprinting, graphic design, 
    electronic music, drawing, painting, songwriting, & music production. 
    <br>✤
-   <br>i live in seattle. i am 31 years old.
-   <br>i am a nonbinary, queer transsexual woman. the pronouns i use are "they/them".
-   <br>✤
-   <br>i am a snob about orange juice, pizza, coffee, & bagels. that's about it tho.
-    <br>i grew up organizing diy shows around my florida bust-town in the 
-    <br>shadow of the Kennedy Space Center.
-    <br>later, i attended Florida State University & studied studio art with a focus on drawing. 
-    <br>i am a proud art school dropout & i despise the elitism insitutional learning engenders in the arts & the workplace.
-    <br>i have toured the states with a band, as well as just kind of drifted around/living out of my car for periods.
-    <br>✤
-    <br>these days i mostly hang at home and read and draw and write songs with my assistant, Worm, the cat.
-    <br>she also goes by Baby, Bambino, Babs, Barbara, etc. 
-  <br>i like quiet forests, incredibly loud live music, sandy beaches, rocky beaches, 
-  ruins, creatures, graffiti, radical theory/history/praxis, queer lit, freaky art, 
-  cinema, & living free wild life.
+   <br>i live in seattle. i am a 31 year old transexual woman.
+   <br>\\
+   <br>
+   <br>i grew up in titusville, fl, which is the town closest to Kennedy Space Center.
+   <br>i first started making comics when i was 9 years old. i was obsessed with Captain Underpants and 
+   Calvin & Hobbes. i also watched a lot of Dragon Ball and Sonic on tv & you could tell if you read those comics.
+   <br>i would draw them during the day & then give them to my dad to print copies at work. 
+   the next morning i would staple them together while i ate my cereal before school.
+   <br>i made serials and trading cards and i sold them to my friends at recess.
+   <br>
+   <br>later, i stopped making comics and focused on being a "good" artist. i also got really into smoking weed & hanging out with
+   skaters. i was too uncoordinated to do much of anything other than push around, but the skaters were nicer than other boys 
+   at school and sometimes there were girls hanging around who were maybe older & into cool music. some of my friends were really good skaters!
+   <br>as a despised skater streetrat, my artistic output dropped but i developed the beginnings of a political understanding, as well as aesthetic & musical tastes.
+   <br>
+   <br>i still drew incessantly & filled margins of my class notes to the brim with doodles & sketches
+   <br>but, i didn't practice art in any focused sense again until my last two years of highschool (2008-2010), when friends and i discovered diy music, 
+   namely the roster of plan-it-x records & its satelite bands. the thought that anyone write some simple songs, record them onto a laptop, make cds,
+   and then drive around playing "shows" to other kids -- that we could even set up our own shows, with or without adults around... this was mind-blowing, 
+   and diy music -- show-running, songwriting, playing, hosting, flyering, touring -- occupied my life more or less for the better part of a decade.
+   <br>during this period i also picked up art and comics again, developing a visual language, toyed with perspective, & investigated narrative. 
+   <br>i was also attended the school of art at Florida State in Tallahassee. 
+   <br>
+   <br>i eventually quit school to travel and focus on my art & music. i ended up in seattle -- first renting an attic, then moving into a real room -- 
+   and i've stuck around since. for a while i was doing a lot of touring and playing shows with my band, guests, and my friends' band, flying fish cove. 
+   <br>these days i mostly hang at my apartment drawing comics or teaching myself printmaking, with my intern, which is what i call my building-mate & friend's cat: Worm.
+   <br>we also call her Baby. she likes to chew up paper & sometimes even gets at originals. 
   <br>✤
-  <br>i sometimes accept freelance jobs. some examples of past work can be found <a href="https://birdflyingbelowtheground.wordpress.com/">here</a>.
+  <br>i sometimes accept freelance jobs. examples of past work can be found <a href="https://birdflyingbelowtheground.wordpress.com/">here</a> & <a href="https://www.instagram.com/the_lookin_machine/">here</a>.
     <p>if you would like to get in touch you can reach me at: <a href="mailto:jean@birdflyingbelowtheground.net">jean@birdflyingbelowtheground.net</a>  
     </p>
     <p>i like email :)</p>
