--- a/about.html
+++ b/about.html
@@ -19,7 +19,6 @@ body {
 	font-family: 'EB Garamond', serif;
   margin-left: 25% ;
   margin-right: 15%;
- background: url("bg1.jpg") no-repeat, scroll;
  
 	}
   @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
@@ -27,28 +26,22 @@ body {
 </head>
 <body>
 <br><h1>About Who?</h1>
-<br><img src="pic-1 copy.png" width="400px" alt="pic of jean holding coffee cup" title="me">
-<p>hi! my name is jean canfield & this is my website. 
-  <br>here i collect, archive, 
-  & share my work. 
+<br><img src="selfyp.jpg" width="400px" alt="" title="me">
+<p>hi my name is jean canfield & this is my website.
+  <br>welcome!
+  <br>feel free to look around
+  <br>i make comics, illustrations, animations, & paintings among other things.
   <br>
-  <br>✤
-  <p>i am an artist & illustrator currently living in seattle, wa.
-    <br>i am a 31 year old transexual woman & anarchist.
-    <br>i grew up in titusville, fl, which is the town closest to Kennedy Space Center.
-    <br>i first started making comics when i was 9 years old. i would draw them during the day & then give them to my dad to print copies at work. 
-    the next morning i would staple them together while i ate my cereal before school.
-    </p>
-    ✤
-    <p>these days i'm making comics again, as well as a lot of other things. 
-<br>i'm always working to keep this site's archive up to date, but my <a href="https://www.instagram.com/the_lookin_machine/">instagram</a> is also 
-a place i share my work. it's probably more up to date.
-      </p>
-    ✤
-    <p>feel free to drop me line : <a href="mailto:jean@birdflyingbelowtheground.net">jean@birdflyingbelowtheground.net</a> 
+   <br> ✤
+    <p>drop me line at <a href="mailto:jean@birdflyingbelowtheground.net">jean@birdflyingbelowtheground.net</a> 
     <br>about what ever. 
     <br>some times i accept commissions. 
-    <br>or if you'd just like to say hi! 
+    <br>
+    <br> ✤
+    <br>
+    <br>check out my <a href="https://birdflyingbelowtheground.wordpress.com/">blog</a> for what i've been working on recently. 
+    <br>at the moment, the rest of the site is an archive of past work, still very much under construction.
+    <br>apologies for any broken links you may run into. i'm working on it !
   </p>
   <br> :•)
     
