--- a/music.html
+++ b/music.html
@@ -16,10 +16,9 @@ h1 {
 
 body {
   background-color:aliceblue;
-	font-size: 20px;
+	font-size: 16px;
 	text-align: left;
-	font-family: 'EB Garamond', serif;
- background: url("bg1.jpg") no-repeat, scroll;
+	font-family:
  
 	}
   details {
@@ -57,11 +56,6 @@ details p {
 </style>
 </head>
 <body>
-  <h1>Music</h1>
-  <br>
-  <br>
-  <br>
-  <h2>bands & music projects</h2>
   <details>
 <summary>
 <h2>guests</h2>
