--- a/about.html
+++ b/about.html
@@ -28,8 +28,11 @@ body {
 <br><img src="selfyp.jpg" width="400px" alt="" title="me">
 <p>jean canfield ✤ 31, trans woman / nonbinary, seattle
   <br>✤ artist, illustrator, musician, printmaker, zinester, etc
-  <br>✤ i run a micro-label called <a href="https://tapesscree.bandcamp.com/">tapes scree</a>
+  <br>✤ i run a music label called <a href="https://tapesscree.bandcamp.com/">tapes scree</a>
    <br>
+   <br>✤ here is a <a href="https://birdflyingbelowtheground.wordpress.com/">blog</a> where i post semi-regularly about my process, inspiration, and projects in development.
+   <br>
+   <br>✤ this is a website i coded by hand in html & css. if anything is not working with it let me know lol!
    <br>
     <p><a href="mailto:jean@birdflyingbelowtheground.net">jean@birdflyingbelowtheground.net</a> 
     <br> 
@@ -37,7 +40,7 @@ body {
     <br>
   <br> :•) 
   <br>
-  <br>lynx: <a href="https://www.yourworldoftext.com/~biggslugg/">WoT</a> <a href="https://www.instagram.com/nineteenninetyninenineninenine/">ig</a> <a href="https://twitter.com/g00__2">twit</a>
+  <br>lynx: <a href="https://www.yourworldoftext.com/~biggslugg/">WoT</a> <a href="https://www.instagram.com/birdflyingbelowtheground/">ig</a> <a href="https://twitter.com/g00__2">twit</a>
 </p>
 <br>
 <br><img src="anarchy.gif" width="75px">
