--- a/music.html
+++ b/music.html
@@ -16,7 +16,7 @@ h1 {
 
 body {
   background-color:aliceblue;
-	font-size: 16px;
+	font-size: 40px;
 	text-align: left;
 	font-family:
  
@@ -56,6 +56,7 @@ details p {
 </style>
 </head>
 <body>
+  <h2><img width="50px" src="discspin.gif"> my discography <img width="50px" src="discspin.gif"></h2>
   <details>
 <summary>
 <h2>guests</h2>
@@ -101,7 +102,7 @@ details p {
             </details>  
       </details>  
       <p></p>
-      <h2>tapes scree (tape label)</h2>
+      <h2><img width="50px" src="scree-swirl.png"> tapes scree (label) <img width="50px" src="butterfly53.gif"></h2>
       <details>
         <summary>
         <h2>releases</h2>
