--- a/music.html
+++ b/music.html
@@ -64,6 +64,7 @@ details p {
 <div class="inner-details">
     <summary>
       <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=866324616/size=large/bgcol=ffffff/linkcol=e99708/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/am">am by guests</a></iframe>      </div>
+      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=787649185/size=large/bgcol=ffffff/linkcol=333333/tracklist=false/artwork=small/track=1782522498/transparent=true/" seamless><a href="https://jackielabel.bandcamp.com/album/peaceful-waters-a-tribute-to-john-prine">Peaceful Waters: A Tribute to John Prine by Guests</a></iframe></div>
       <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4266885844/size=large/bgcol=ffffff/linkcol=2ebd35/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/legacy-out-back">Legacy Out Back by guests</a></iframe>    </div>
     <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3290601048/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://guests1.bandcamp.com/album/sunday-practice">Sunday Practice by guests</a></iframe>  </div>  
   </summary>
